Finishing up GET route
